@@ -1,6 +1,12 @@
 2011-01-16  Jakub Jelinek  <jakub@redhat.com>
 
 	Backport from mainline
+	2010-12-10  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/46864
+	* tree-ssa-loop-im.c (loop_suitable_for_sm): Return false even
+	when there are EDGE_EH exit edges.
+
 	2010-12-09  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/41082
